# Spibot_Project

./: .gitignore  README.md  frames.gv  spibot.gv  sw转urdf注意事项.md  攀爬机器人学习记录.md
devel/: .catkin  setup.sh
devel/lib/pkgconfig/: legged_control.pc  sipder_robot.pc  spibot_control.pc  spibot_model.pc  spibot_plugin.pc  spider_gazebo.pc  urdf_transformer.pc
devel/lib/spibot_control/: Draw  grippers_control  joint_transform  show_data  spibot_joint_move_noetic  spibot_move_noetic  urdf_transformer
devel/lib/urdf_transformer/: move_traj  urdf_transformer
devel/share/legged_control/cmake/: legged_controlConfig.cmake
devel/share/sipder_robot/cmake/: sipder_robotConfig.cmake
devel/share/spibot_control/cmake/: spibot_controlConfig.cmake
devel/share/spibot_model/cmake/: spibot_modelConfig.cmake
devel/share/spibot_plugin/cmake/: spibot_pluginConfig.cmake
devel/share/spider_gazebo/cmake/: spider_gazeboConfig.cmake
devel/share/urdf_transformer/cmake/: urdf_transformerConfig.cmake
src/legged_control/: CMakeLists.txt  package.xml  readme.md
src/legged_control/config/: robot_control.yaml
src/legged_control/launch/: legged_control.launch
src/sipder_robot/: CMakeLists.txt  readme.md
src/sipder_robot/config/: joint_names_sipder_robot.yaml  spibot.rviz
src/sipder_robot/launch/: copy.launch  display.launch  display_new.launch  gazebo.launch  gazebo_xacro.launch  show_WindTurbine_Blade.launch
src/sipder_robot/meshes/: WindTurbine_Blade.STL  camera.STL  hip2.STL  hip3.STL  hip4.STL  lidar.STL  shank1.STL  shank2.STL  shank3.STL
src/sipder_robot/meshes/spibot/: WindTurbine_Blade.STL  Wind_Turbine.STL  hip1.STL  shank4.STL
src/sipder_robot/urdf/: SpibotRl.txt  SpibotRl.urdf  WindTurbine_Blade.csv  WindTurbine_Blade.urdf  anymal.urdf  anymal_minimal.urdf  go2.urdf  sipder_robot.csv  sipder_robot.urdf  spibot.urdf  spibot_new.urdf
src/sipder_robot/worlds/: WindTurbine_Blade.world  apartment.world  box_house.world  box_house1.world  empty_world.world
src/sipder_robot/xacro/: add_wind_turbine.xacro  car_model_description.xacro  const.xacro  gazebo.xacro  nanocarpro.xacro  plugin.xacro  root_.xacro  spibot.xacro  spibot_new.xacro  spibot_with_sensors.xacro  transmission.xacro
src/sipder_robot/xacro/gazebo/: camera.xacro  foot_add_grippers.xacro  foot_suction_cups.xacro  imu.xacro  kinect.xacro  laser.xacro  velodyne.xacro
src/spibot_control/: CMakeLists.txt  package.xml
src/spibot_control/config/: cartographer_3d.lua
src/spibot_control/include/: baselink_twist.h  grippers_control.h  move_trajectory.h  move_trajectory_constraints.h  urdf_transformer.h
src/spibot_control/include/common/: const.h  timeMarker.h
src/spibot_control/launch/: amcl.launch  map_saver.launch  nav.launch  path.launch  set_pub.launch  slam_gmapping.launch
src/spibot_control/map/: nav.pgm  nav.yaml
src/spibot_control/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/spibot_control/scripts/: teleop_keyboard.py
src/spibot_control/src/: Draw.cpp  apply_body_wrench_force.cpp  baselink_twist.cpp  grippers_control.cpp  joint_publisher.cpp  joint_publisher_constrains.cpp  move_trajectory.cpp  move_trajectory_constraints.cpp  odom_publisher.cpp  urdf_transformer.cpp
src/spibot_plugin/: CMakeLists.txt  轨迹显示.md
src/spibot_plugin/src/: TriangleDrawPlugin.cc  TriangleDrawPlugin.cpp  draw_traj_plugin.cc  draw_triangle_plugin.cc
