<?xml version="1.0"?>
<package format="2">
  <name>spibot_control</name>
  <version>0.0.1</version>
  <description>The spibot_control package</description>

  <maintainer email="wujieling@hnu.edu.cn">wujieling</maintainer>

  <license>BSD</license>  <!-- 更新许可证信息 -->

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>genmsg</buildtool_depend>

  <build_depend>controller_manager</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>tf2_msgs</build_export_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <!-- <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/> -->
  </export>
</package>
